--- a/public/downloads.html
+++ b/public/downloads.html
@@ -7,7 +7,7 @@
 <body>
 
     <p>
-        <a href="/PaieDL">File download</a>
+        <a href="/test">Attachment file download</a>
     </p>
 
 </body>
